--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>360info Embed Code Wrapper</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
+		<meta name="robots" content="noindex">
 		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!-- smui -->
