Fix relative paths issue

--- a/src/app.html
+++ b/src/app.html
@@ -22,7 +22,7 @@
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Roboto+Mono"
 		/>
-		<link rel="stylesheet" href="/smui.css" />
+		<link rel="stylesheet" href="%svelte.assets%/smui.css" />
 		%svelte.head%
 	</head>
 	<body>
